# marachain

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
src/data/: member.json
src/database/: federation.db
src/lib/peers/: Cargo.toml  identity.rs  lib.rs
src/lib/wallet/: Cargo.toml  lib.rs
src/mara_cli/: mara_cli_dto.rs  mara_cli_model.rs  mara_cli_service.rs  mod.rs
src/mara_fed_member/: member_model.rs  member_service.rs  member_utils.rs  mod.rs
src/mara_fed_peer/: mod.rs  peer_model.rs  peer_utils.rs
src/mara_fed_peg/: mod.rs  peg_model.rs  peg_utils.rs
src/mara_fed_scanner/: mod.rs  scanner_model.rs  scanner_service.rs  scanner_utils.rs
src/mara_fed_transaction/: mod.rs  transaction_dto.rs  transaction_model.rs  transaction_service.rs  transaction_utils.rs
src/mara_fed_wallet/: mod.rs  wallet_dto.rs  wallet_model.rs  wallet_service.rs  wallet_utils.rs
