[package]
name = "management"
version = "0.1.0"
edition = "2021"
authors = ["Ashu Swami"]
homepage = "https://gitlab.com/jeyakumar3/mara-federation-management/"
repository = "https://gitlab.com/jeyakumar3/mara-federation-management/"
documentation = "https://gitlab.com/jeyakumar3/mara-federation-management/"
description = "Federation Management Node"
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"

[dependencies]
actix-rt = "2.8.0"
actix-cors = "0.6.4"
actix-web = "4.3.0"
env_logger = "0.10.0"
curl = "0.4.44"
rusqlite = "0.28.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
qstring = "0.7.2"
zmq = "0.9.1"
hex = "0.4.0"
chrono = "0.4.24"
tempfile ="3.2.0"
futures = "0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.walletlib]
path = "src/lib/wallet"


[dependencies.peerlib]
path = "src/lib/peers"